[gd_scene load_steps=4 format=3 uid="uid://gm5vsdis43km"]

[ext_resource type="Script" uid="uid://s0udrvnf8afc" path="res://components/platform/floating_platform.gd" id="1_i7pm0"]
[ext_resource type="Texture2D" uid="uid://dqw33avfa0be3" path="res://assets/new sprites/spritesheet-tiles-default.png" id="1_utsrn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i7pm0"]

[node name="FloatingPlatform" type="StaticBody2D"]
script = ExtResource("1_i7pm0")
axis_move = 1

[node name="sprite" type="Node2D" parent="."]

[node name="left" type="Sprite2D" parent="sprite"]
position = Vector2(-61, 0)
texture = ExtResource("1_utsrn")
hframes = 18
vframes = 18
frame = 19

[node name="middle" type="Sprite2D" parent="sprite"]
texture = ExtResource("1_utsrn")
hframes = 18
vframes = 18
frame = 37

[node name="right" type="Sprite2D" parent="sprite"]
position = Vector2(60, 0)
texture = ExtResource("1_utsrn")
hframes = 18
vframes = 18
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(9.32, 3.3199995)
shape = SubResource("RectangleShape2D_i7pm0")

[node name="TopRay" type="RayCast2D" parent="."]
position = Vector2(0, -35)
rotation = 3.1415927
scale = Vector2(0.35100037, 0.3)
collision_mask = 12
collide_with_areas = true

[node name="BottomRay" type="RayCast2D" parent="."]
position = Vector2(0, 35)
scale = Vector2(0.3, 0.3)
collision_mask = 12
collide_with_areas = true

[node name="LeftRay" type="RayCast2D" parent="."]
position = Vector2(-94, 0)
rotation = 1.5707964
scale = Vector2(0.3, 0.3)
collision_mask = 12
collide_with_areas = true

[node name="RightRay" type="RayCast2D" parent="."]
position = Vector2(95, 1.1723955e-13)
rotation = -1.5707964
scale = Vector2(0.3, 0.3)
collision_mask = 12
collide_with_areas = true
